<resources>
    <string name="app_name">MovieApp</string>
    <string name="originTitle">Origin Title: %s</string>
    <string name="originLanguage">Origin Language: %s</string>
    <string name="releaseYear">"Release Year: %s</string>
    <string name="genres">Genres: </string>
    <string name="score">Score: %s</string>
    <string name="reload">Reload</string>
    <string name="no_internet_message">No Internet</string>
    <string name="description">Description</string>
    <string name="more_details">More Details</string>
    <string name="total_vote">Total vote: %s</string>
</resources>